src/antlr/PythonParser.java
// Generated from C:/Users/HP/Desktop/UniProjects/Compiler Project/Grammars/PythonParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEF=1, CLASS=2, IF=3, ELIF=4, ELSE=5, FOR=6, WHILE=7, RETURN=8, IMPORT=9, 
		FROM=10, AS=11, IN=12, IS=13, AND=14, OR=15, NOT=16, PASS=17, BREAK=18, 
		CONTINUE=19, WITH=20, TRY=21, EXCEPT=22, FINALLY=23, RAISE=24, LAMBDA=25, 
		TRUE=26, FALSE=27, NONE=28, YIELD=29, ASSERT=30, DEL=31, GLOBAL=32, NONLOCAL=33, 
		DOUBLESTAR_EQUAL=34, DOUBLESLASH=35, DOUBLESTAR=36, LEFTSHIFT=37, RIGHTSHIFT=38, 
		PLUSEQUAL=39, MINUSEQUAL=40, STAREQUAL=41, SLASHEQUAL=42, PERCENTEQUAL=43, 
		ATEQUAL=44, EQEQUAL=45, NOTEQUAL=46, LESSEQUAL=47, GREATEREQUAL=48, ARROW=49, 
		PLUS=50, MINUS=51, STAR=52, SLASH=53, PERCENT=54, AT=55, EQUAL=56, AMPER=57, 
		VBAR=58, CIRCUMFLEX=59, TILDE=60, LESS=61, GREATER=62, LPAREN=63, RPAREN=64, 
		LSQB=65, RSQB=66, LBRACE=67, RBRACE=68, COMMA=69, COLON=70, DOT=71, SEMI=72, 
		ELLIPSIS=73, STRING=74, NUMBER=75, NAME=76, NEWLINE=77, SKIP_=78, COMMENT=79, 
		LINE_CONTINUATION=80;
	public static final int
		RULE_file_input = 0, RULE_stmt = 1, RULE_simple_stmt = 2, RULE_small_stmt = 3, 
		RULE_expr_stmt = 4, RULE_augassign = 5, RULE_del_stmt = 6, RULE_pass_stmt = 7, 
		RULE_flow_stmt = 8, RULE_break_stmt = 9, RULE_continue_stmt = 10, RULE_return_stmt = 11, 
		RULE_yield_stmt = 12, RULE_raise_stmt = 13, RULE_import_stmt = 14, RULE_import_name = 15, 
		RULE_import_from = 16, RULE_import_as_name = 17, RULE_dotted_as_name = 18, 
		RULE_import_as_names = 19, RULE_dotted_as_names = 20, RULE_dotted_name = 21, 
		RULE_global_stmt = 22, RULE_nonlocal_stmt = 23, RULE_assert_stmt = 24, 
		RULE_compound_stmt = 25, RULE_if_stmt = 26, RULE_while_stmt = 27, RULE_for_stmt = 28, 
		RULE_try_stmt = 29, RULE_with_stmt = 30, RULE_with_item = 31, RULE_except_clause = 32, 
		RULE_suite = 33, RULE_funcdef = 34, RULE_parameters = 35, RULE_typedargslist = 36, 
		RULE_tfpdef = 37, RULE_classdef = 38, RULE_decorated = 39, RULE_decorator = 40, 
		RULE_test = 41, RULE_test_nocond = 42, RULE_lambdef = 43, RULE_lambdef_nocond = 44, 
		RULE_or_test = 45, RULE_and_test = 46, RULE_not_test = 47, RULE_comparison = 48, 
		RULE_comp_op = 49, RULE_star_expr = 50, RULE_expr = 51, RULE_xor_expr = 52, 
		RULE_and_expr = 53, RULE_shift_expr = 54, RULE_arith_expr = 55, RULE_term = 56, 
		RULE_factor = 57, RULE_power = 58, RULE_atom_expr = 59, RULE_atom = 60, 
		RULE_testlist_comp = 61, RULE_trailer = 62, RULE_subscriptlist = 63, RULE_subscript = 64, 
		RULE_sliceop = 65, RULE_exprlist = 66, RULE_testlist = 67, RULE_dictorsetmaker = 68, 
		RULE_classdef_or_funcdef = 69, RULE_arglist = 70, RULE_argument = 71, 
		RULE_comp_iter = 72, RULE_comp_for = 73, RULE_comp_if = 74, RULE_yield_expr = 75, 
		RULE_yield_arg = 76, RULE_testlist_star_expr = 77, RULE_varargslist = 78, 
		RULE_vfpdef = 79;
	private static String[] makeRuleNames() {
		return new String[] {
			"file_input", "stmt", "simple_stmt", "small_stmt", "expr_stmt", "augassign", 
			"del_stmt", "pass_stmt", "flow_stmt", "break_stmt", "continue_stmt", 
			"return_stmt", "yield_stmt", "raise_stmt", "import_stmt", "import_name", 
			"import_from", "import_as_name", "dotted_as_name", "import_as_names", 
			"dotted_as_names", "dotted_name", "global_stmt", "nonlocal_stmt", "assert_stmt", 
			"compound_stmt", "if_stmt", "while_stmt", "for_stmt", "try_stmt", "with_stmt", 
			"with_item", "except_clause", "suite", "funcdef", "parameters", "typedargslist", 
			"tfpdef", "classdef", "decorated", "decorator", "test", "test_nocond", 
			"lambdef", "lambdef_nocond", "or_test", "and_test", "not_test", "comparison", 
			"comp_op", "star_expr", "expr", "xor_expr", "and_expr", "shift_expr", 
			"arith_expr", "term", "factor", "power", "atom_expr", "atom", "testlist_comp", 
			"trailer", "subscriptlist", "subscript", "sliceop", "exprlist", "testlist", 
			"dictorsetmaker", "classdef_or_funcdef", "arglist", "argument", "comp_iter", 
			"comp_for", "comp_if", "yield_expr", "yield_arg", "testlist_star_expr", 
			"varargslist", "vfpdef"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'class'", "'if'", "'elif'", "'else'", "'for'", "'while'", 
			"'return'", "'import'", "'from'", "'as'", "'in'", "'is'", "'and'", "'or'", 
			"'not'", "'pass'", "'break'", "'continue'", "'with'", "'try'", "'except'", 
			"'finally'", "'raise'", "'lambda'", "'True'", "'False'", "'None'", "'yield'", 
			"'assert'", "'del'", "'global'", "'nonlocal'", "'**='", "'//'", "'**'", 
			"'<<'", "'>>'", "'+='", "'-='", "'*='", "'/='", "'%='", "'@='", "'=='", 
			"'!='", "'<='", "'>='", "'->'", "'+'", "'-'", "'*'", "'/'", "'%'", "'@'", 
			"'='", "'&'", "'|'", "'^'", "'~'", "'<'", "'>'", "'('", "')'", "'['", 
			"']'", "'{'", "'}'", "','", "':'", "'.'", "';'", "'...'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEF", "CLASS", "IF", "ELIF", "ELSE", "FOR", "WHILE", "RETURN", 
			"IMPORT", "FROM", "AS", "IN", "IS", "AND", "OR", "NOT", "PASS", "BREAK", 
			"CONTINUE", "WITH", "TRY", "EXCEPT", "FINALLY", "RAISE", "LAMBDA", "TRUE", 
			"FALSE", "NONE", "YIELD", "ASSERT", "DEL", "GLOBAL", "NONLOCAL", "DOUBLESTAR_EQUAL", 
			"DOUBLESLASH", "DOUBLESTAR", "LEFTSHIFT", "RIGHTSHIFT", "PLUSEQUAL", 
			"MINUSEQUAL", "STAREQUAL", "SLASHEQUAL", "PERCENTEQUAL", "ATEQUAL", "EQEQUAL", 
			"NOTEQUAL", "LESSEQUAL", "GREATEREQUAL", "ARROW", "PLUS", "MINUS", "STAR", 
			"SLASH", "PERCENT", "AT", "EQUAL", "AMPER", "VBAR", "CIRCUMFLEX", "TILDE", 
			"LESS", "GREATER", "LPAREN", "RPAREN", "LSQB", "RSQB", "LBRACE", "RBRACE", 
			"COMMA", "COLON", "DOT", "SEMI", "ELLIPSIS", "STRING", "NUMBER", "NAME", 
			"NEWLINE", "SKIP_", "COMMENT", "LINE_CONTINUATION"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PythonParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class File_inputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PythonParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(PythonParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PythonParser.NEWLINE, i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public File_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterFile_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitFile_input(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitFile_input(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_inputContext file_input() throws RecognitionException {
		File_inputContext _localctx = new File_inputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -8026540418713843762L) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & 7941L) != 0)) {
				{
				setState(162);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(160);
					match(NEWLINE);
					}
					break;
				case DEF:
				case CLASS:
				case IF:
				case FOR:
				case WHILE:
				case RETURN:
				case IMPORT:
				case FROM:
				case NOT:
				case PASS:
				case BREAK:
				case CONTINUE:
				case WITH:
				case TRY:
				case RAISE:
				case LAMBDA:
				case TRUE:
				case FALSE:
				case NONE:
				case YIELD:
				case ASSERT:
				case DEL:
				case GLOBAL:
				case NONLOCAL:
				case PLUS:
				case MINUS:
				case STAR:
				case AT:
				case TILDE:
				case LPAREN:
				case LSQB:
				case LBRACE:
				case ELLIPSIS:
				case STRING:
				case NUMBER:
				case NAME:
					{
					setState(161);
					stmt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(167);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtCompoundContext extends StmtContext {
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public StmtCompoundContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterStmtCompound(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitStmtCompound(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitStmtCompound(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtSimpleContext extends StmtContext {
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public StmtSimpleContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterStmtSimple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitStmtSimple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitStmtSimple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(171);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RETURN:
			case IMPORT:
			case FROM:
			case NOT:
			case PASS:
			case BREAK:
			case CONTINUE:
			case RAISE:
			case LAMBDA:
			case TRUE:
			case FALSE:
			case NONE:
			case YIELD:
			case ASSERT:
			case DEL:
			case GLOBAL:
			case NONLOCAL:
			case PLUS:
			case MINUS:
			case STAR:
			case TILDE:
			case LPAREN:
			case LSQB:
			case LBRACE:
			case ELLIPSIS:
			case STRING:
			case NUMBER:
			case NAME:
				_localctx = new StmtSimpleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(169);
				simple_stmt();
				}
				break;
			case DEF:
			case CLASS:
			case IF:
			case FOR:
			case WHILE:
			case WITH:
			case TRY:
			case AT:
				_localctx = new StmtCompoundContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(170);
				compound_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_stmtContext extends ParserRuleContext {
		public List<Small_stmtContext> small_stmt() {
			return getRuleContexts(Small_stmtContext.class);
		}
		public Small_stmtContext small_stmt(int i) {
			return getRuleContext(Small_stmtContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(PythonParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(PythonParser.SEMI, i);
		}
		public TerminalNode NEWLINE() { return getToken(PythonParser.NEWLINE, 0); }
		public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSimple_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSimple_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitSimple_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_stmtContext simple_stmt() throws RecognitionException {
		Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simple_stmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			small_stmt();
			setState(178);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(174);
					match(SEMI);
					setState(175);
					small_stmt();
					}
					} 
				}
				setState(180);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(181);
				match(SEMI);
				}
			}

			setState(185);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(184);
				match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Small_stmtContext extends ParserRuleContext {
		public Small_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_small_stmt; }
	 
		public Small_stmtContext() { }
		public void copyFrom(Small_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SmallStmtFlowContext extends Small_stmtContext {
		public Flow_stmtContext flow_stmt() {
			return getRuleContext(Flow_stmtContext.class,0);
		}
		public SmallStmtFlowContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSmallStmtFlow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSmallStmtFlow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitSmallStmtFlow(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SmallStmtImportContext extends Small_stmtContext {
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public SmallStmtImportContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSmallStmtImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSmallStmtImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitSmallStmtImport(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SmallStmtGlobalContext extends Small_stmtContext {
		public Global_stmtContext global_stmt() {
			return getRuleContext(Global_stmtContext.class,0);
		}
		public SmallStmtGlobalContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSmallStmtGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSmallStmtGlobal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitSmallStmtGlobal(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SmallStmtNonlocalContext extends Small_stmtContext {
		public Nonlocal_stmtContext nonlocal_stmt() {
			return getRuleContext(Nonlocal_stmtContext.class,0);
		}
		public SmallStmtNonlocalContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSmallStmtNonlocal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSmallStmtNonlocal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitSmallStmtNonlocal(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SmallStmtAssertContext extends Small_stmtContext {
		public Assert_stmtContext assert_stmt() {
			return getRuleContext(Assert_stmtContext.class,0);
		}
		public SmallStmtAssertContext(Small_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSmallStmtAssert(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSmallStmtAssert(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
